<resources>
    <string name="app_name">Kanlane</string>
    <string name="undermain">С заботой о старших.</string>
    <string name="name_reg">Введите ваше имя…</string>
    <string name="email_reg_and_login">Введите вашу почту…</string>
    <string name="password_reg">Придумайте пароль…</string>
    <string name="register_btn">Регистрация</string>
    <string name="login_mainscreen">Уже зарегистрированы? Войти.</string>
    <string name="login_btn">Войти</string>
    <string name="registrarion_login_screen">Впервые здесь? Зарегистрироваться.</string>
    <string name="logout_btn">Выйти</string>
    <string name="login_password">Введите пароль…</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="user_bind">Введите номер телефона получателя…</string>
    <string name="sos_button">SOS</string>
    <string name="account">Аккаунт</string>
    <string name="note_name">Название</string>
    <string name="note_desc">Описание</string>
    <string name="note_edit_description">Введите описание…</string>
    <string name="note_edit_name">Введите название…</string>
    <string name="note_save">Сохранить</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="delete">Чтобы удалить аккаунт подтвердите, что это Вы</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="add_note_btn">+</string>

</resources>