<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="550sp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="55sp"></TextView>

    </LinearLayout>
    <TextView
        android:id="@+id/slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textAlignment="center"
        android:text="@string/undermain"
        android:layout_marginTop="145sp"
        android:gravity="center"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginBottom="500sp">
    </TextView>

    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:gravity="center"
       android:orientation="vertical" />

    <EditText
        android:id="@+id/login_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="332dp"
        android:textColor="@color/white"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto_bold"
        android:inputType="textEmailAddress"
        android:text="@string/email_reg_and_login"
        android:textSize="25dp"
        android:padding="10dp"
        android:gravity="center"

        />

    <EditText
        android:id="@+id/login_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="422dp"
        android:textColor="@color/white"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto_bold"
        android:inputType="text"
        android:text="@string/login_password"
        android:textSize="25dp"
        android:padding="10dp"
        android:gravity="center" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="552dp"

        android:layout_marginRight="32dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/login_btn"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:iconTint="#d4a8fd" />
    <TextView
        android:id="@+id/register_login_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="632dp"
        android:textSize="15dp"
        android:textAlignment="center"
        android:text="@string/registrarion_login_screen"
        android:fontFamily="@font/roboto_bold">





    </TextView>

</RelativeLayout>