<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.DeleteAccount">


    <TextView
        android:layout_width="327dp"
        android:layout_height="168dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="640dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_horizontal"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


    </TextView>

    <EditText
        android:id="@+id/email_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="508dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/email_reg_and_login"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_delete" />


    <Button
        android:id="@+id/delete_acc_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="52dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/delete_account"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:iconTint="#d4a8fd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703" />

</androidx.constraintlayout.widget.ConstraintLayout>